2004-04-03  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	Properties [menu|popup] items are now disabled unless a single book
	is selected.
	
	* data/alexandria/glade/info_book_dialog.glade,
	  data/alexandria/glade/new_book_dialog.glade:

	Fixed Gtk::Button response IDs.

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	- Added statusbar information about current selection ;
	- Added "View as [Icons|List]" in the popup menus.

2004-04-01  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/main_app.glade:

	Moved 'Edit/Delete' after 'Edit/[De]select All'.

	* lib/alexandria/book.rb,
	  lib/alexandria/ui/main_app.rb:

	Implemented the 'Delete' book action.  

	* lib/alexandria/ui/alert_dialog.rb,
	  lib/alexandria/ui/error_dialog.rb,
	  lib/alexandria/ui.rb:

	Renamed error_dialog.rb in alert_dialog.rb.

2004-03-31  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	- Removed obsolete callbacks ;
	- Added a popup menu for multiple selections and a default one
	  when nothing is selected yet ;
	- Implemented the 'Refresh' action.

2004-03-31  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	Added 'Edit/Select All' and 'Edit/Deselect All'.

2004-03-30  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/icons/alexandria_small.png,
	  data/alexandria/icons/library.png,
	  data/alexandria/icons/library_small.png,
	  lib/alexandria/ui/icons.rb:

	Added.

	* data/alexandria/glade/main_app.glade,
	  data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/book.rb,
	  lib/alexandria/ui.rb,
	  lib/alexandria/ui/about_dialog.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog.rb:
	
	- Implemented the side pane ;
	- Implemented 'View as Icons/List' ;
	- Added popup menu for single selections ;